# go-search-extension

./: .gitignore  .gitmodules  LICENSE  Makefile  PRIVACY-POLICY.md  README.md  index.css  index.html  juice.css  manifest.jsonnet  sitemap.xml
.github/workflows/: build.yml  chrome.yml  docs.yml  firefox.yml
changelog/: index.html
crawler/: LICENSE  README.md  go.mod  go.sum  main.go
crawler/cmd/: db.go  root.go
crawler/pkg/controller/: api.go  api_test.go  cache_meta.go  cache_meta_test.go  meta.go  meta_test.go  update.go  update_test.go
crawler/pkg/crawler/: get_godev_doc.go  get_godev_doc_test.go  get_std_doc.go
crawler/pkg/data/: hotpkg.sql  metadata.go  pkg.go  sql.go
crawler/pkg/db/: db.go  db_test.go
crawler/pkg/file/: api.go
crawler/pkg/gpool/: gpool_test.go
crawler/pkg/http/: client.go  client_test.go
crawler/pkg/svc/: get_meta_from_file.go  get_meta_from_file_test.go  get_std_lib_doc.go  get_std_lib_doc_test.go
docs/: config.toml
docs/content/: _index.md  changelog.md  faq.md  privacy.md
docs/sass/: index.scss
docs/templates/: _variables.html  index.html
extension/: godocs.js  main.js  manifest.json  packages.js
extension/command/: help.js
extension/index/: awesome.js  godocs.js  others.js  packages.js
extension/popup/: index.css  index.html
extension/search/: awesome.js  docs.js  package.js
faq/: index.html
index/: Cargo.toml
privacy/: index.html
