[package]
name = "build-golang-index"
version = "0.1.0"
authors = ["Folyd <lyshuhow@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
rusqlite = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = "0.11"
tokio = { version="1.21", features=["macros", "rt-multi-thread"] }
regex = "1"